--- a/conservation/africa/index.html
+++ b/conservation/africa/index.html
@@ -481,7 +481,7 @@
 
     <div class="quote" id="footnotes">
 
-      <p class="small">This list was updated September 2019.</p>
+      <p class="small">This page was updated September 2019.</p>
 
       <p class="linebreak small"><sup>1</sup>&nbsp; A &ldquo;game reserve&rdquo; is a protected area where animals are seen on safari as well as are hunted for <i>sport</i>. In a game reserve, animal populations are controlled in their natural habitat. And so their ecosystems are conserved. A reserve that prohibits hunting may be considered a &ldquo;nature reserve&rdquo;.</p>
       <p class="small"><sup>2</sup>&nbsp; Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA) is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders.</p>
