--- a/scene/one/companion-app-augmented-reality/index.html
+++ b/scene/one/companion-app-augmented-reality/index.html
@@ -80,8 +80,8 @@
 
       <div class="clear">
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup>&nbsp; Qualcomm Vuforia Toolkit. <a href="../../../url/-com/qualcomm-vuforia/" title="Qualcomm / Vuforia" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup>&nbsp; Unity Real-time Development. <a href="../../../url/-com/unity/" title="Unity" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup>&nbsp; Qualcomm Vuforia Toolkit. <a href="../../../url/-com/qualcomm-vuforia/" title="Qualcomm / Vuforia" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>2</sup>&nbsp; Unity Real-time Development. <a href="../../../url/-com/unity/" title="Unity" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
