--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -80,7 +80,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup>&nbsp; Mark Deeble, wildlife filmmaker. <a href="../../../url/wordpress/markdeeble/" title="Mark Deeble" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup>&nbsp; Mark Deeble, wildlife filmmaker. <a href="../../../url/wordpress/markdeeble/" title="Mark Deeble" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
