--- a/scene/one/elephant-conservation-amboseli/index.html
+++ b/scene/one/elephant-conservation-amboseli/index.html
@@ -97,8 +97,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup>&nbsp; Brandt, N. &lsquo;His name was Igor.&rsquo; Big Life Foundation. 2018. <a href="../../../url/-com/nickbrandt-big-life-foundation/" target="_blank" title="Nick Brandt / Big Life Foundation">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup>&nbsp; Big Life Foundation. &lsquo;Big Life's new digital chess board.&rsquo; 2019. <a href="../../../url/-org/biglife-digital-chess-board/" target="_blank" title="Big Life Foundation / Digital chess board.">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup>&nbsp; Brandt, N. &lsquo;His name was Igor.&rsquo; Big Life Foundation. 2018. <a href="../../../url/-com/nickbrandt-big-life-foundation/" target="_blank" title="Nick Brandt / Big Life Foundation">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>2</sup>&nbsp; Big Life Foundation. &lsquo;Big Life's new digital chess board.&rsquo; 2019. <a href="../../../url/-org/biglife-digital-chess-board/" target="_blank" title="Big Life Foundation / Digital chess board.">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -132,9 +132,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-4">
-          <p class="small"><sup>3</sup>&nbsp; Dupuis-Désormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/researchgate/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">PDF&nbsp;Document</a></p>
-          <p class="small"><sup>4</sup>&nbsp; King, L. &lsquo;Human-elephant co-existence toolbox.&rsquo; Save the Elephants, Elephants and Bees Project. 2018. <a href="../../../url/-com/elephantsandbees-2018-h-e-c-toolbox-pdf/" target="_blank" title="Save the Elephants / Elephants and Bees / HEC Toolbox">PDF&nbsp;Document</a></p>
-          <p class="small"><sup>5</sup>&nbsp; Big Life Foundation. &lsquo;Threading elephants through the eye of a needle.&lsquo; 2019. <a href="../../../url/-org/biglife-threading-elephants-through-the-eye-of-a-needle/" target="_blank" title="Big Life Foundation / Threading elephants through the eye of a needle.">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup>&nbsp; Dupuis-Désormeaux, M., Macdonald, S. &lsquo;Converging evidence for vanilla as an elephant attractant.&rsquo; 2012. <a href="../../../url/researchgate/converging-evidence-for-vanilla-as-an-elephant-attractant/" target="_blank" title="Research Gate / Converging evidence for vanilla as an elephant attractant.">Document<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>4</sup>&nbsp; King, L. &lsquo;Human-elephant co-existence toolbox.&rsquo; Save the Elephants, Elephants and Bees Project. 2018. <a href="../../../url/-com/elephantsandbees-2018-h-e-c-toolbox-pdf/" target="_blank" title="Save the Elephants / Elephants and Bees / HEC Toolbox">Document<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>5</sup>&nbsp; Big Life Foundation. &lsquo;Threading elephants through the eye of a needle.&lsquo; 2019. <a href="../../../url/-org/biglife-threading-elephants-through-the-eye-of-a-needle/" target="_blank" title="Big Life Foundation / Threading elephants through the eye of a needle.">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -172,7 +172,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-5">
-          <p class="small"><sup>6</sup>&nbsp; Brandt, N. <i>Across The Ravaged Land</i> &lsquo;Across The Ravaged Land.&rsquo; 2013. <a href="../../../url/-com/nickbrandt-essays-across-the-ravaged-land/" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup>&nbsp; Brandt, N. <i>Across The Ravaged Land</i> &lsquo;Across The Ravaged Land.&rsquo; 2013. <a href="../../../url/-com/nickbrandt-essays-across-the-ravaged-land/" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
