--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup>&nbsp; Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website&nbsp;Link</a></p>
+        <p class="small"><sup>1</sup>&nbsp; Wild Bird Trust &ndash; Okavango Wilderness Project <a href="../../../url/-com/wildbirdtrust-okavango-wilderness-project/" rel="noopener" target="_blank" title="Wild Bird Trust / Okavango Wilderness Project">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
       </div>
 
@@ -203,7 +203,7 @@
       </div>
 
       <div class="quote" id="footnotes-3">
-        <p class="small"><sup>2</sup>&nbsp; The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website&nbsp;Link</a></p>
+        <p class="small"><sup>2</sup>&nbsp; The HALO Trust, Landmine clearance in Angola. <a href="../../../url/-org/halotrust-okavango/" rel="noopener" target="_blank" title="The HALO Trust / Landmine clearance in Angola.">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
       </div>
 
