--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -67,9 +67,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup>&nbsp; Games For Change (G4C), Festival, New York City. <a href="../../../url/www/gamesforchange/" title="Games For Change" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup>&nbsp; <i>Artcast</i>, Chris Oatley. <a href="../../../url/www/chrisoatley-podcasts/" title="Chris Oatley / Artcast" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup>&nbsp; <i>Lean Into Art</i>, Jerzy Drozd and Rob Stenzinger. <a href="../../../url/www/leanintoart/" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup>&nbsp; Games For Change (G4C), Festival, New York City. <a href="../../../url/www/gamesforchange/" title="Games For Change" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>2</sup>&nbsp; <i>Artcast</i>, Chris Oatley. <a href="../../../url/www/chrisoatley-podcasts/" title="Chris Oatley / Artcast" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>3</sup>&nbsp; <i>Lean Into Art</i>, Jerzy Drozd and Rob Stenzinger. <a href="../../../url/www/leanintoart/" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
           ></a> by  and <a href="../../../url/www/leanintoart/" target="_blank" title="Jerzy Drozd and Rob Stenzinger / Lean Into Art"><i>Lean Into Art</i></a>
 
@@ -131,8 +131,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>4</sup>&nbsp; Vimeo / Ryan Woodward &ndash; Thought of You (animated short, 2010). <a href="../../../url/vimeo/14803194/" title="Vimeo / Ryan Woodward / Thought of You" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>5</sup>&nbsp; National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/-gov/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup>&nbsp; Vimeo / Ryan Woodward &ndash; Thought of You (animated short, 2010). <a href="../../../url/vimeo/14803194/" title="Vimeo / Ryan Woodward / Thought of You" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>5</sup>&nbsp; National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/-gov/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
