--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -114,11 +114,11 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Yong, E. &lsquo;An interview with David Attenborough&rsquo;, National Geographic. December 29, 2008. <a href="../../../url/nationalgeographic/an-interview-with-david-attenborough/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Yong, E. &lsquo;An interview with David Attenborough&rsquo;, National Geographic. December 29, 2008. <a href="../../../url/nationalgeographic/an-interview-with-david-attenborough/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>2</sup> Pierce, D. &lsquo;The Crazy New Camera Tech That Made Planet Earth II Possible&rsquo;, Wired. March 26, 2017. <a href="../../../url/wired/crazy-new-camera-tech-made-planet-earth-2-possible/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup> Pierce, D. &lsquo;The Crazy New Camera Tech That Made Planet Earth II Possible&rsquo;, Wired. March 26, 2017. <a href="../../../url/wired/crazy-new-camera-tech-made-planet-earth-2-possible/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>3</sup> Slenske, M. &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times. March 18, 2007. <a href="../../../url/nytimes/2007-03-18-arts-television/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Slenske, M. &lsquo;All Creatures Great, Small&hellip; And Endangered&rsquo;, New York Times. March 18, 2007. <a href="../../../url/nytimes/2007-03-18-arts-television/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -221,9 +221,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>4</sup> Fong, J and Lee, D. &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox. February 20, 2017. <a href="../../../url/vox/making-of-planet-earth-2/" title="Vox / Making of Planet Earth 2" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Fong, J and Lee, D. &lsquo;How the BBC makes Planet Earth look like a Hollywood movie&rsquo;, Vox. February 20, 2017. <a href="../../../url/vox/making-of-planet-earth-2/" title="Vox / Making of Planet Earth 2" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <!-- <p class="small"><sup></sup> Youngs, I. BBC News. July 24, 2014. <a href="../../../url//" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
+          <!-- <p class="small"><sup></sup> Youngs, I. BBC News. July 24, 2014. <a href="../../../url//" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p> -->
           <!-- bbc.com/news/entertainment-arts-28405412 -->
 
         </div>
@@ -321,9 +321,9 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-4">
-          <p class="small"><sup>5</sup> Nguyen, H. &lsquo;<i>Planet Earth II</i> Producers Reveal 6 Sneaky Ways They Filmed Their Animal Stars&rsquo;, IndieWire. February 15, 2017. <a href="../../../url/indiewire/planet-earth-2-filmmaking/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> Nguyen, H. &lsquo;<i>Planet Earth II</i> Producers Reveal 6 Sneaky Ways They Filmed Their Animal Stars&rsquo;, IndieWire. February 15, 2017. <a href="../../../url/indiewire/planet-earth-2-filmmaking/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
-          <p class="small"><sup>6</sup> Bryant, W C. &lsquo;How <i>Planet Earth</i> Works&rsquo;, How Stuff Works. <a href="../../../url/howstuffworks/planet-earth/" title="" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Bryant, W C. &lsquo;How <i>Planet Earth</i> Works&rsquo;, How Stuff Works. <a href="../../../url/howstuffworks/planet-earth/" title="" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
