--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -89,7 +89,7 @@
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup>&nbsp; Ralph, J. &ldquo;We Will Not Go&rdquo;, 2014. <a href="../../../url/youtube/iJ9WXvPhTrs/" title="YouTube / We Will Not Go by J. Ralph with Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup>&nbsp; Ramsey, S. (2017) &ldquo;Interview With Emmanuel de Merode, Director of Virunga National Park&rdquo; National Geographic. <a href="../../../url/-org/nationalgeographic-interview-with-emmanuel-de-merode-director-of-virunga-national-park/" title="National Geographic / Interview with Emmanuel de Merode" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup>&nbsp; Ramsey, S. (2017) &ldquo;Interview With Emmanuel de Merode, Director of Virunga National Park&rdquo; National Geographic. <a href="../../../url/-org/nationalgeographic-interview-with-emmanuel-de-merode-director-of-virunga-national-park/" title="National Geographic / Interview with Emmanuel de Merode" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -153,8 +153,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup>&nbsp; Mann, E. M. <a href="../../../url/x/michaelmann/" title="X / Michael E. Mann" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup>&nbsp; Sellers, P. NASA Goddard, 2016. <a href="../../../url/-gov/nasa-piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup>&nbsp; Mann, E. M. <a href="../../../url/x/michaelmann/" title="X / Michael E. Mann" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>4</sup>&nbsp; Sellers, P. NASA Goddard, 2016. <a href="../../../url/-gov/nasa-piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
         </div>
       </div>
@@ -232,8 +232,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>5</sup>&nbsp; Scott Salinas, H. <i>The Ivory Game</i>, 2016. <a href="../../../url/-com/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>6</sup>&nbsp; Kaiserlicht. <i>The Ivory Game</i> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video&nbsp;Link</a><a href="../../../url/-at/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup>&nbsp; Scott Salinas, H. <i>The Ivory Game</i>, 2016. <a href="../../../url/-com/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
+          <p class="small"><sup>6</sup>&nbsp; Kaiserlicht. <i>The Ivory Game</i> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video&nbsp;Link</a><a href="../../../url/-at/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website<font class="none small">&nbsp;&nearr;</font></a></p>
 
 
         </div>
