--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -87,7 +87,7 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup>&nbsp; MoMA. Exhibitions, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitions / 1998 / Aleksandr Rodchenko">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>1</sup>&nbsp; MoMA. Exhibitions, 1998: Aleksandr Rodchenko. <a href="../../../url/moma/rodchenko/" rel="noopener" target="_blank" title="MoMA / Exhibitions / 1998 / Aleksandr Rodchenko">Website<font class="none small">&nbsp;&nearr;</font></a>.</p>
 
       </div>
 
@@ -232,8 +232,8 @@
       </div>
 
       <div class="quote" id="footnotes-2">
-        <p class="small"><sup>2</sup>&nbsp; Gamblin. Mineral, modern colors. <a href="../../../url/-com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website&nbsp;Link</a>.</p>
-        <p class="small"><sup>3</sup>&nbsp; Gamblin. Conservation colors. <a href="../../../url/-com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website&nbsp;Link</a>.</p>
+        <p class="small"><sup>2</sup>&nbsp; Gamblin. Mineral, modern colors. <a href="../../../url/-com/gamblincolors-mineral-modern-colors/" rel="noopener" target="_blank" title="Gamblin / Mineral, Modern Colors">Website<font class="none small">&nbsp;&nearr;</font></a>.</p>
+        <p class="small"><sup>3</sup>&nbsp; Gamblin. Conservation colors. <a href="../../../url/-com/conservationcolors/" rel="noopener" target="_blank" title="Gamblin / Conservation Colors">Website<font class="none small">&nbsp;&nearr;</font></a>.</p>
 
       </div>
 
