--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -85,7 +85,7 @@
       <br>
 
       <div class="clear">
-        <img alt="" src="https://via.animathabitat.org/img/01/geo/kavango-zambezi.map.color.nm.png" />
+        <img alt="" src="https://via.animathabitat.org/img/01/geo/~/kavango-zambezi.map.color.nm.png" />
         <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>, edited and recolored]</p>
 
       </div>
@@ -120,7 +120,7 @@
 
       </div>
 
-      <img alt="" src="https://via.animathabitat.org/img/01/geo/kavango-zambezi.map.information.jpg" />
+      <img alt="" src="https://via.animathabitat.org/img/01/geo/~/kavango-zambezi.map.information.jpg" />
       <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
 
       <div class="clear">
