--- a/document/index.html
+++ b/document/index.html
@@ -7,11 +7,11 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="Archived documents at Animat Habitat." />
+  <meta name="description" content="Archived documents at Animat Habitat.&nbsp;&#92;&nbsp;Documents archivés chez Animat Habitat." />
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat archived documents&hellip;</title>
+  <title>Animat Habitat archived documents.</title>
 
   <style>
     html { background-color: #333; }
