--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -91,8 +91,8 @@
       </div>
 
       <div class="clear-bottom clear-top">
-        <img alt="" src="https://via.animathabitat.org/img/01/art/~/trajan-column.rome.2015-09.220.jpg" />
-        <p class="text-right">Trajan's Column, Rome [<a title="Wikipedia / Trajan's Column" href="../../../url/wiki/trajans-column/" target="_blank" rel="noopener">wikipedia.org</a>]</p>
+        <img alt="" class="grayscale" src="https://via.animathabitat.org/img/01/art/~/trajan-column.rome.2015-09.220.jpg" />
+        <p class="text-right">Trajan's Column, Rome [<a title="Wikipedia / Trajan's Column" href="../../../url/wiki/trajans-column/" target="_blank" rel="noopener">wikipedia.org</a>, desaturated]</p>
       </div>
 
       <div>
