--- a/document/index.html
+++ b/document/index.html
@@ -55,7 +55,9 @@
 
       <p class="small linebreak"><font class="en">You may close this page at any time.</font><font class="fr">Vous pouvez fermer cette page à tout moment.</font></p>
 
-      <p class="small linebreak"><font class="en">Exit through the <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../boutique/" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p>
+      <p class="small linebreak"><font class="en"><a onclick="history.go(-2);" title="Back">Back</a>.</font><font class="fr"><a onclick="history.go(-2);" title="Retour">Retour</a>.</font></p>
+
+      <!-- <p class="small linebreak"><font class="en">Exit through the <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a>.</font><font class="fr"><a href="../boutique/" title="Animat Habitat boutique.">Sortir par la boutique</a>.</font></p> -->
 
     </div>
 
