--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -62,7 +62,7 @@
 
         <div class="gutter-tobo">
 
-          <form class="js-cm-form" id="subForm" target="_blank" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A0A6F439069801F09A0CBBA94313CBFA8A9CFD0F6155D001351425E67703E4EEF34D21D77DAA7B416D98109D811B72051">
+          <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A0A6F439069801F09A0CBBA94313CBFA8A9CFD0F6155D001351425E67703E4EEF34D21D77DAA7B416D98109D811B72051">
 
             <!-- <div class="clear">
               <label class="" for="dliyu">Optional: Register for the project broadcast: Art and story&hellip; And elephants.</label>
@@ -99,7 +99,6 @@
         <p class="linebreak">At this time, the United States of America was consuming 200 tons of ivory per year.<sup>&nbsp;[<a class="button" onclick="fn();" title="Hartley, 2013">2</a>]</sup></p>
 
         <p class="linebreak"><i>Elephants continued to be slaughtered into the 1950s, with influxes of trafficked ivory that corresponded to African regions gaining independence from colonial rule. This meant wars. And elephants were a casualty.</i></p>
-
 
       </div>
 
